force-app/zurich-base/main/default/objects/AccionesTratadasActa__c/AccionesTratadasActa__c.object-meta.xml
<CustomObject>
    <description>Acciones tratadas asociadas a un acta</description>
    <label>Acciones Tratadas Acta</label>
    <nameField>
        <displayFormat>AT-{0000000}</displayFormat>
        <label>Acciones Tratadas Acta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acciones Tratadas Acta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>