force-app/zurich-base/main/default/objects/AccionesTratadasActa__c/fields/ActionResponsible__c.field-meta.xml
<CustomField>
    <fullName>ActionResponsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Responsable de la acción definida en el acta del evento</description>
    <label>Responsable de la Acción</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Acciones_Tratadas_Acta</relationshipName>
    <type>Lookup</type>
</CustomField>