force-app/zurich-base/main/default/objects/AccionesTratadasActa__c/fields/Actions__c.field-meta.xml
<CustomField>
    <fullName>Actions__c</fullName>
    <label>Acciones Tratadas</label>
    <type>TextArea</type>
</CustomField>