force-app/zurich-base/main/default/objects/AccionesTratadasActa__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <label>Fecha Límite</label>
    <type>Date</type>
</CustomField>