force-app/zurich-base/main/default/objects/AccionesTratadasActa__c/fields/Iniciativa__c.field-meta.xml
<CustomField>
    <fullName>Iniciativa__c</fullName>
    <label>Iniciativa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SoW</fullName>
            </value>
            <value>
                <fullName>Diversa</fullName>
            </value>
            <value>
                <fullName>Expats</fullName>
            </value>
            <value>
                <fullName>Conectividad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>