force-app/zurich-base/main/default/objects/AccionesTratadasActa__c/fields/Observations__c.field-meta.xml
<CustomField>
    <fullName>Observations__c</fullName>
    <label>Observaciones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>