force-app/zurich-base/main/default/objects/AccionesTratadasActa__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <label>Acta</label>
    <referenceTo>Acta__c</referenceTo>
    <relationshipLabel>Acciones Tratadas</relationshipLabel>
    <relationshipName>AccionesTratadasActa</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>