force-app/zurich-base/main/default/objects/AccionesTratadasActa__c/fields/PersonInCharge__c.field-meta.xml
<CustomField>
    <fullName>PersonInCharge__c</fullName>
    <label>Responsable</label>
    <type>TextArea</type>
</CustomField>