force-app/zurich-base/main/default/objects/AccionesTratadasActa__c/fields/PlanDeNegocio__c.field-meta.xml
<CustomField>
    <fullName>PlanDeNegocio__c</fullName>
    <label>Plan de negocio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>